# pms-api

./: .env.example  .env.local.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: backend-ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_pms_owner_baseline_schema.py  0002_pms_auth_nav_registry.py  0003_pms_suppliers_owner.py  0004_pms_admin_user_management.py  0005_pms_service_permission_execution_tables.py  0006_pms_service_capability_catalog.py  0007_pms_iam_snapshot_read_v1.py  0008_retire_pms_iam_snapshot_read_v1.py
app/: main.py  settings.py
app/contracts/: __init__.py  pms_read.py
app/core/: security.py
app/db/: base.py  deps.py  metadata.py  session.py
app/repositories/: barcode_read_repo.py  item_basic_read_repo.py  item_policy_read_repo.py  item_report_meta_read_repo.py  sku_code_read_repo.py  uom_read_repo.py
app/routers/: health.py  pms_owner.py  pms_read_v1.py
app/service_auth/: __init__.py  deps.py
app/user/: __init__.py
docs/: dev-ports.md
pms_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: db_smoke.py  ensure_admin.py  print_routes.py
scripts/migration/: pms_split_export_import.sh  pms_suppliers_export_import.sh
tests/api/: test_db_config.py  test_health.py  test_pms_admin_user_management_contract.py  test_pms_admin_users_read_only_api.py  test_pms_auth_navigation_routes.py  test_pms_owner_baseline_schema_contract.py  test_pms_owner_boundary.py  test_pms_owner_item_route_order.py  test_pms_owner_routes.py  test_pms_owner_runtime_read_surface_guard.py  (+16 more)
(+107 files in other folders)
