[project]
name = "pms-api"
version = "0.1.0"
description = "Standalone PMS API service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-ra -q --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
